--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,13 +16,24 @@ android {
     }
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            buildConfigField("String", "MOVIE_DATABASE_API_KEY", getKey("RELEASE.MOVIE_DATABASE_API_KEY"))
+        }
+        debug {
+            minifyEnabled false
+            buildConfigField("String", "MOVIE_DATABASE_API_KEY", getKey("DEBUG.MOVIE_DATABASE_API_KEY"))
         }
     }
     repositories {
         mavenCentral()
     }
+}
+
+static def getKey(String key){
+    Properties props = new Properties()
+    props.load(new FileInputStream(new File('keys.properties')))
+    return props[key]
 }
 
 dependencies {
