--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,7 @@ language: android
 android:
   components:
     # The BuildTools version used by your project
+    - build-tools-26.0.2
     - build-tools-26.1.0
 
     # The SDK version used to compile your project
