disable abortOnError option for lint

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,9 @@ android {
         maven { url 'https://jitpack.io' }
         jcenter()
     }
+    lintOptions {
+        abortOnError false
+    }
 }
 
 static def getKey(String key){
