--- a/.travis.yml
+++ b/.travis.yml
@@ -16,8 +16,12 @@ android:
 before_install:
  - chmod +x gradlew
  - yes | sdkmanager "platforms;android-27"
-before_script:
+script:
+ - ./gradlew build jacocoTestReport assembleAndroidTest
  - echo no | android create avd --force -n test -t android-21 --abi armeabi-v7a
  - emulator -avd test -no-skin -no-audio -no-window &
  - android-wait-for-emulator
  - adb shell input keyevent 82 &
+  - ./gradlew connectedCheck
+after_success:
+  - bash <(curl -s https://codecov.io/bash)
