--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,7 @@ script:
  - echo no | android create avd --force -n test -t android-21 --abi armeabi-v7a
  - emulator -avd test -no-skin -no-audio -no-window &
  - android-wait-for-emulator
- - adb shell input keyevent 82 &
-  - ./gradlew connectedCheck
+ - adb shell setprop dalvik.vm.dexopt-flags v=n,o=v
+ - ./gradlew connectedCheck
 after_success:
   - bash <(curl -s https://codecov.io/bash)
