--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,10 +17,12 @@ android {
         release {
             minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            buildConfigField("String", "MOVIE_DATABASE_BASE_URL", "\"https://api.themoviedb.org/3/movie/\"")
             buildConfigField("String", "MOVIE_DATABASE_API_KEY", getKey("RELEASE.MOVIE_DATABASE_API_KEY"))
         }
         debug {
             minifyEnabled false
+            buildConfigField("String", "MOVIE_DATABASE_BASE_URL", "\"https://api.themoviedb.org/3/movie/\"")
             buildConfigField("String", "MOVIE_DATABASE_API_KEY", getKey("DEBUG.MOVIE_DATABASE_API_KEY"))
             testCoverageEnabled true
         }
