--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,6 +26,12 @@ android {
             buildConfigField("String", "MOVIE_DATABASE_API_KEY", getKey("DEBUG.MOVIE_DATABASE_API_KEY"))
             testCoverageEnabled true
         }
+        staging {
+            minifyEnabled false
+            buildConfigField("String", "MOVIE_DATABASE_BASE_URL", "\"http://localhost:5000/mockMovieApi/\"")
+            buildConfigField("String", "MOVIE_DATABASE_API_KEY", "\"1234567890\"")
+            testCoverageEnabled true
+        }
     }
     repositories {
         mavenCentral()
@@ -35,6 +41,7 @@ android {
     lintOptions {
         abortOnError false
     }
+    testBuildType "staging"
 }
 
 static def getKey(String key){
@@ -48,13 +55,13 @@ static def getKey(String key){
 }
 
 dependencies {
-    compile 'com.squareup.picasso:picasso:2.5.2'
-    compile 'com.github.jkcclemens:khttp:0.1.0'
+    implementation 'com.squareup.picasso:picasso:2.5.2'
+    implementation 'com.github.jkcclemens:khttp:0.1.0'
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation"org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
     implementation 'com.android.support:appcompat-v7:27.0.2'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
+    androidTestImplementation 'com.android.support.test:runner:1.0.1'
 }
