--- a/.travis.yml
+++ b/.travis.yml
@@ -17,11 +17,12 @@ before_install:
  - chmod +x gradlew
  - yes | sdkmanager "platforms;android-27"
 script:
+ - ./gradlew assembleStaging
  - ./gradlew build jacocoTestReport assembleStagingAndroidTest
  - echo no | android create avd --force -n test -t android-21 --abi armeabi-v7a
  - emulator -avd test -no-skin -no-audio -no-window &
  - android-wait-for-emulator
  - adb shell setprop dalvik.vm.dexopt-flags v=n,o=v
- - ./gradlew connectedCheck
+ - ./gradlew connectedStagingAndroidTest
 after_success:
   - bash <(curl -s https://codecov.io/bash)
