--- a/.travis.yml
+++ b/.travis.yml
@@ -22,7 +22,7 @@ script:
  - emulator -avd test -no-skin -no-audio -no-window &
  - android-wait-for-emulator
  - adb shell setprop dalvik.vm.dexopt-flags v=n,o=v
- - ./gradlew assembleDebug
- - ./gradlew connectedAndroidTest
+ - ./gradlew assembleStaging
+ - ./gradlew connectedTest
 after_success:
   - bash <(curl -s https://codecov.io/bash)
