--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,19 +17,19 @@ android {
         release {
             minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-            buildConfigField("String", "MOVIE_DATABASE_BASE_URL", "\"https://api.themoviedb.org/3/movie/\"")
+            buildConfigField("String", "MOVIE_DATABASE_BASE_URL", "\"https://api.themoviedb.org/3/movie\"")
             buildConfigField("String", "MOVIE_DATABASE_API_KEY", getKey("RELEASE.MOVIE_DATABASE_API_KEY"))
         }
         debug {
             minifyEnabled false
-            buildConfigField("String", "MOVIE_DATABASE_BASE_URL", "\"https://api.themoviedb.org/3/movie/\"")
+            buildConfigField("String", "MOVIE_DATABASE_BASE_URL", "\"https://api.themoviedb.org/3/movie\"")
             buildConfigField("String", "MOVIE_DATABASE_API_KEY", getKey("DEBUG.MOVIE_DATABASE_API_KEY"))
             testCoverageEnabled true
         }
         staging {
             signingConfig signingConfigs.debug
             minifyEnabled false
-            buildConfigField("String", "MOVIE_DATABASE_BASE_URL", "\"http://localhost:5000/mockMovieApi/\"")
+            buildConfigField("String", "MOVIE_DATABASE_BASE_URL", "\"http://localhost:5000\"")
             buildConfigField("String", "MOVIE_DATABASE_API_KEY", "\"1234567890\"")
             testCoverageEnabled true
         }
@@ -63,4 +63,6 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:27.0.2'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     testImplementation 'junit:junit:4.12'
+    testImplementation 'com.pyruby:java-stub-server:0.12'
+
 }
