--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,12 @@ before_install:
  - chmod +x gradlew
  - yes | sdkmanager "platforms;android-27"
 script:
- - ./gradlew compileStagingSources jacocoTestStagingUnitTestReport testStagingUnitTest --stacktrace
+ - ./gradlew compileStagingSources testStagingUnitTest
+ - echo no | android create avd --force -n test -t android-21 --abi armeabi-v7a
+ - emulator -avd test -no-skin -no-audio -no-window &
+ - android-wait-for-emulator
+ - adb shell setprop dalvik.vm.dexopt-flags v=n,o=v
+ - ./gradlew connectedStagingAndroidTest
+ - ./gradlew jacocoTestStagingUnitTestReport
 after_success:
   - bash <(curl -s https://codecov.io/bash)
