--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ android:
   components:
     # The BuildTools version used by your project
     - build-tools-27.0.2
+    - build-tools-26.0.2
 
     # The SDK version used to compile your project
     - android-21
