--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,7 @@ before_install:
  - chmod +x gradlew
  - yes | sdkmanager "platforms;android-27"
 script:
+ - ./gradlew estStagingUnitTest
  - echo no | android create avd --force -n test -t android-21 --abi armeabi-v7a
  - emulator -avd test -no-skin -no-audio -no-window &
  - android-wait-for-emulator
