--- a/app/build.gradle
+++ b/app/build.gradle
@@ -91,8 +91,8 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
     implementation 'com.android.support:appcompat-v7:27.0.2'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+    implementation 'com.github.tomakehurst:wiremock:2.14.0'
     testImplementation 'org.testng:testng:6.9.6'
-    testImplementation 'com.github.tomakehurst:wiremock:2.14.0'
     androidTestImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
