--- a/app/build.gradle
+++ b/app/build.gradle
@@ -87,13 +87,13 @@ static def getKey(String key) {
 dependencies {
     implementation 'com.squareup.picasso:picasso:2.5.2'
     implementation 'com.github.jkcclemens:khttp:0.1.0'
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
     implementation 'com.android.support:appcompat-v7:27.0.2'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
-    implementation 'com.github.tomakehurst:wiremock:2.14.0'
+    implementation 'com.android.support.test:runner:1.0.1'
+    implementation 'com.android.support.test.espresso:espresso-core:3.0.1'
+    implementation 'junit:junit:4.12'
+    testImplementation 'com.github.tomakehurst:wiremock:2.14.0'
     testImplementation 'org.testng:testng:6.9.6'
-    androidTestImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.1'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
 }
