--- a/app/build.gradle
+++ b/app/build.gradle
@@ -83,6 +83,7 @@ static def getKey(String key) {
 }
 
 dependencies {
+    implementation 'com.google.code.gson:gson:2.8.0'
     implementation 'com.squareup.picasso:picasso:2.5.2'
     implementation 'com.github.jkcclemens:khttp:0.1.0'
     implementation 'com.android.support:appcompat-v7:27.0.2'
