--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ before_install:
 script:
  - ./gradlew testStagingUnitTest
  - echo no | android create avd --force -n test -t android-21 --abi armeabi-v7a
- - emulator -avd test -no-skin -no-audio -no-window &
+ - emulator -avd test -skin 2560x1600 -no-audio -no-window &
  - android-wait-for-emulator
  - adb shell setprop dalvik.vm.dexopt-flags v=n,o=v
  - ./gradlew connectedStagingAndroidTest
